--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@babel/runtime": "^7.0.0-beta.55",
     "react": "16.5.0",
     "react-native": "0.57.1",
+    "react-native-elements": "^0.19.1",
     "react-native-splash-screen": "^3.0.6",
-    "react-native-vector-icons": "^5.0.0"
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.17.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
