--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-native": "0.57.1",
     "react-native-dropdownalert": "^3.7.0",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-phone-call": "^1.0.9",
     "react-native-splash-screen": "^3.0.6",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.17.0",
