--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-native": "0.57.1",
+    "react-native-calendars": "^1.21.0",
     "react-native-dropdownalert": "^3.7.0",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-material-dropdown": "^0.11.1",
