--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+android.enableAapt2=true
+android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=demoEkoSaveRelease.keystore
+MYAPP_RELEASE_KEY_ALIAS=demoEkoSave
+MYAPP_RELEASE_STORE_PASSWORD=Hola@321
+MYAPP_RELEASE_KEY_PASSWORD=Hola@321
