--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "react-native-calendars": "^1.21.0",
     "react-native-dropdownalert": "^3.7.0",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-flash-message": "^0.1.10",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-phone-call": "^1.0.9",
-    "react-native-splash-screen": "^3.0.6",
+    "react-native-splash-screen": "^3.0.9",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^2.17.0",
-    "rn-fetch-blob": "^0.10.13"
+    "react-navigation": "^2.17.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
