funcionando en google

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,11 +114,11 @@ android {
   }
 } */
     defaultConfig {
-        applicationId "com.proyectoprueba"
+        applicationId "com.leadis.ekosave"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 7
+        versionName "1.1"
         
         ndk {
             abiFilters "armeabi-v7a", "x86"
