--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,8 +117,8 @@ android {
         applicationId "com.leadis.ekosave"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 7
-        versionName "1.1"
+        versionCode 8
+        versionName "1.2"
         
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -165,6 +165,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-device-info')
     //compile project(':rn-fetch-blob')
     compile project(':react-native-splash-screen')
     compile project(':react-native-vector-icons')
